--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -3,5 +3,20 @@
 @tailwind utilities;
 
 body {
-    background: linear-gradient(180deg, #191D1E 0%, #393c3b 100%);
+    background-color: #191D1E;
+    min-height: 100vh;
+    /* background: linear-gradient(180deg, #191D1E 0%, #393c3b 100%); */
+}
+
+html{
+    scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar{
+    width: 10px;
+    background-color: #3e3e3e;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: #191D1E;
 }
