--- a/front-end/src/Components/Header/Header.css
+++ b/front-end/src/Components/Header/Header.css
@@ -34,11 +34,13 @@ header{
     outline: 1px solid rgb(169, 169, 169);
 }
 
-#navigation button{
+#navigation a{
+    cursor: pointer;
     transition: transform 330ms ease-in-out;
 }
 
-#navigation button:hover{
+#navigation a:hover{
+    cursor: pointer;
     transform: translateY(-3px);
 }
 
