--- a/front-end/src/Pages/Login/Login.css
+++ b/front-end/src/Pages/Login/Login.css
@@ -14,7 +14,7 @@ form{
 #input {
     border-radius: 10px ;
     background-color: #484B4C;
-    color: #A3A4A5;
+    color: #ffffff;
     padding: 5px 15px 5px 15px;
     font-size: 1em;
     cursor: pointer;
